--- a/public/style.css
+++ b/public/style.css
@@ -34,7 +34,6 @@ body {
 
 /* Custom page footer */
 .footer {
-    padding-top: 19px;
     color: #777;
 }
 
@@ -55,7 +54,7 @@ body {
 
 /* Supporting marketing content */
 .marketing {
-    margin: 40px 0;
+    margin-top: 40px 0;
 }
 
 .marketing p + h4 {
