--- a/public/partials/queryForm.html
+++ b/public/partials/queryForm.html
@@ -45,7 +45,7 @@
 
                 <div class="form-group">
                     <label for="maxage">Max Age</label>
-                    <input type="number" class="form-control" id="maxage" placeholder="80" ng-model="formData.maxAge">
+                    <input type="number" class="form-control" id="maxage" placeholder="80" ng-model="formData.maxage">
                 </div>
 
                 <div class="form-group">
