--- a/public/partials/addForm.html
+++ b/public/partials/addForm.html
@@ -50,7 +50,7 @@
                     <label for="verified">HTML5 Verified Location?</label>
                     <input type="text" class="form-control" id="verified" placeholder= "Nope (Thanks for spamming my map...)" ng-model="formData.htmlverified" readonly>
                 </div>
-                <button type="submit" class="btn btn-danger btn-block" ng-click="createUser()" ng-disabled="addForm.$invalid">Submit</button>
+                <button type="submit" class="btn btn-primary btn-block" ng-click="createUser()" ng-disabled="addForm.$invalid">Submit</button>
             </form>
         </div>
     </div>
