Added in code for handling initial forwarding.

--- a/public/partials/queryForm.html
+++ b/public/partials/queryForm.html
@@ -33,7 +33,7 @@
                         Female
                     </label>
                     <label class="checkbox-inline">
-                        <input type="checkbox" name="optionsRadios" id="checkother" value="What's it to ya?" ng-model="formData.other">
+                        <input type="checkbox" name="optionsRadios" id="checkother" value="Whats it to ya?" ng-model="formData.other">
                         What's it to ya?
                     </label>
                 </div>
