--- a/public/partials/addForm.html
+++ b/public/partials/addForm.html
@@ -8,17 +8,17 @@
         <div class="panel-body">
             <form name ="addForm">
                 <div class="form-group">
-                    <label for="username">Username <span class="badge">Required</span></label>
+                    <label for="username">Username</span></label>
                     <input type="text" class="form-control" id="username" placeholder="OldandGold" ng-model="formData.username" required>
                 </div>
                 <label class="radio control-label">Gender</label>
                 <div class="radio">
                     <label>
-                        <input type="radio" name="optionsRadios" id="radiomale" value="Male" ng-model="formData.gender">
+                        <input type="radio" name="optionsRadios" id="radiomale" value="Male" ng-model="formData.gender" required>
                         Male
                     </label>
                 </div>
-                <div class="radio">
+                <div class="radio" required>
                     <label>
                         <input type="radio" name="optionsRadios" id="radiofemale" value="Female" ng-model="formData.gender">
                         Female
@@ -32,11 +32,11 @@
                 </div>
                 <div class="form-group">
                     <label for="age">Age</label>
-                    <input type="number" class="form-control" id="age" placeholder="72" ng-model="formData.age">
+                    <input type="number" class="form-control" id="age" placeholder="72" ng-model="formData.age" required>
                 </div>
                 <div class="form-group">
                     <label for="language">Favorite Language</label>
-                    <input type="text" class="form-control" id="language" placeholder="Fortran" ng-model="formData.favlang">
+                    <input type="text" class="form-control" id="language" placeholder="Fortran" ng-model="formData.favlang" required>
                 </div>
                 <div class="form-group">
                     <label for="latitude">Latitude</label>
