Fixed the gender query.

--- a/public/partials/addForm.html
+++ b/public/partials/addForm.html
@@ -14,19 +14,19 @@
                 <label class="radio control-label">Gender</label>
                 <div class="radio">
                     <label>
-                        <input type="radio" name="optionsRadios" id="radiomale" value="Male" ng-model="formData.gender" required>
+                        <input type="radio" name="optionsRadios" id="radiomale" value="Male" ng-model="formData.male">
                         Male
                     </label>
                 </div>
                 <div class="radio" required>
                     <label>
-                        <input type="radio" name="optionsRadios" id="radiofemale" value="Female" ng-model="formData.gender">
+                        <input type="radio" name="optionsRadios" id="radiofemale" value="Female" ng-model="formData.female">
                         Female
                     </label>
                 </div>
                 <div class="radio">
                     <label>
-                        <input type="radio" name="optionsRadios" id="radioother" value="What's it to ya?" ng-model="formData.gender">
+                        <input type="radio" name="optionsRadios" id="radioother" value="What's it to ya?" ng-model="formData.other">
                         What's it to ya?
                     </label>
                 </div>
