--- a/public/partials/queryForm.html
+++ b/public/partials/queryForm.html
@@ -25,15 +25,15 @@
                 <label>Gender</label>
                 <div class="form-group">
                     <label class="checkbox-inline">
-                        <input type="checkbox" name="optionsRadios" id="checkmale" value="Male" ng-model="formData.male">
+                        <input type="checkbox" name="optionsRadios" id="checkmale" value="Male" ng-model="formData.male" ng-true-value = "'Male'">
                         Male
                     </label>
                     <label class="checkbox-inline">
-                        <input type="checkbox" name="optionsRadios" id="checkfemale" value="Female" ng-model="formData.female">
+                        <input type="checkbox" name="optionsRadios" id="checkfemale" value="Female" ng-model="formData.female" ng-true-value="'Female'">
                         Female
                     </label>
                     <label class="checkbox-inline">
-                        <input type="checkbox" name="optionsRadios" id="checkother" value="Whats it to ya?" ng-model="formData.other">
+                        <input type="checkbox" name="optionsRadios" id="checkother" value="Whats it to ya?" ng-model="formData.other" ng-true-value="'Whats it to ya?'">
                         What's it to ya?
                     </label>
                 </div>
