Added queryCount logic.

--- a/public/partials/queryForm.html
+++ b/public/partials/queryForm.html
@@ -1,27 +1,35 @@
-<!-- Post Form -->
+<!-- Find Teammates (Query) Form -->
 <div class="col-md-5">
+
+    <!-- Creates Main Panel -->
     <div class="panel panel-default">
+
+        <!-- Panel Title -->
         <div class="panel-heading">
             <h2 class="panel-title text-center">Find Teammates! (Map Query)</h2>
         </div>
 
+        <!-- Panel Body -->
         <div class="panel-body">
-            <form name ="addForm">
+
+            <!-- Creates Form -->
+            <form name ="queryForm">
+
+                <!-- Text Boxes and Other User Inputs. Note ng-model binds the values to Angular $scope -->
                 <div class="form-group">
                     <label for="latitude">Your Location</span></label>
                     <input type="text" class="form-control" id="latitude" placeholder="39.5" ng-model="formData.latitude" readonly>
                 </div>
-
                 <div class="form-group">
                     <label for="longitude">Your Location</span></label>
                     <input type="text" class="form-control" id="longitude" placeholder="-98.35" ng-model="formData.longitude" readonly>
                 </div>
-
                 <div class="form-group">
                     <label for="distance">Max. Distance (miles)</span></label>
                     <input type="text" class="form-control" id="distance" placeholder="500" ng-model="formData.distance">
                 </div>
 
+                <!-- Note ng-true-value which translates check values into explicit gender strings -->
                 <label>Gender</label>
                 <div class="form-group">
                     <label class="checkbox-inline">
@@ -37,22 +45,18 @@
                         What's it to ya?
                     </label>
                 </div>
-
                 <div class="form-group">
                     <label for="minage">Min. Age</label>
                     <input type="number" class="form-control" id="minage" placeholder="5" ng-model="formData.minage">
                 </div>
-
                 <div class="form-group">
                     <label for="maxage">Max Age</label>
                     <input type="number" class="form-control" id="maxage" placeholder="80" ng-model="formData.maxage">
                 </div>
-
                 <div class="form-group">
                     <label for="favlang">Favorite Language</label>
                     <input type="text" class="form-control" id="favlang" placeholder="Fortran" ng-model="formData.favlang">
                 </div>
-
                 <div class="form-group">
                     <div class="checkbox">
                         <label>
@@ -61,11 +65,14 @@
                     </div>
                 </div>
 
+                <!-- Query button. Note that its tied to queryUsers() function from queryCtrl.  -->
                 <button type="submit" class="btn btn-danger btn-block" ng-click="queryUsers()">Search</button>
             </form>
         </div>
-        <div ng-hide=true class="panel-footer">
-            <p class="text-center">Hot Dang! We Found 45 Teammates.</p>
+
+        <!-- Footer panel for displaying count. Note how it will only display if queryCount is greater than 0 -->
+        <div ng-show="queryCount>0" class="panel-footer">
+                <p class="text-center">Hot Dang! We Found {{queryCount}} Teammates.</p>
         </div>
     </div>
 </div>
