Added bulk of comments

--- a/public/partials/queryForm.html
+++ b/public/partials/queryForm.html
@@ -17,15 +17,15 @@
 
                 <!-- Text Boxes and Other User Inputs. Note ng-model binds the values to Angular $scope -->
                 <div class="form-group">
-                    <label for="latitude">Your Location</span></label>
+                    <label for="latitude">Your Latitude</label>
                     <input type="text" class="form-control" id="latitude" placeholder="39.5" ng-model="formData.latitude" readonly>
                 </div>
                 <div class="form-group">
-                    <label for="longitude">Your Location</span></label>
+                    <label for="longitude">Your Longitude</label>
                     <input type="text" class="form-control" id="longitude" placeholder="-98.35" ng-model="formData.longitude" readonly>
                 </div>
                 <div class="form-group">
-                    <label for="distance">Max. Distance (miles)</span></label>
+                    <label for="distance">Max. Distance (miles)</label>
                     <input type="text" class="form-control" id="distance" placeholder="500" ng-model="formData.distance">
                 </div>
 
