Corrected nt-true-value for "What's it to ya"

--- a/public/partials/queryForm.html
+++ b/public/partials/queryForm.html
@@ -41,7 +41,7 @@
                         Female
                     </label>
                     <label class="checkbox-inline">
-                        <input type="checkbox" name="optionsRadios" id="checkother" value="Whats it to ya?" ng-model="formData.other" ng-true-value="'Whats it to ya?'">
+                        <input type="checkbox" name="optionsRadios" id="checkother" value="What's it to ya?" ng-model="formData.other" ng-true-value="'What\'s it to ya?'">
                         What's it to ya?
                     </label>
                 </div>
